# btmux

./: .gitignore  .svnignore  ChangeLog  ChangeSet  CodingStyle  INSTALL  LICENSE  Makefile.am  Makefile.dist  Makefile.in  README  SUPPORT  TODO  UPGRADING  autoconf.h.in  autogen.sh  configure  configure.ac  configure.in  getdata.sh
btech/: Makefile.am  Makefile.in  autoconf.h.in  configure  configure.ac
btech/btfi/: Attributes.cc  Attributes.hh  Codec.cc  Codec.hh  Document.cc  Document.hh  Element.cc  Element.hh  Exception.hh  Makefile.am  Makefile.in  MutableAttributes.cc  MutableAttributes.hh  Name.cc  Name.hh  ObjectPool.hh  Serializable.hh  Value.cc  Value.hh  VocabSimple.cc  VocabSimple.hh  VocabTable.hh  Vocabulary.cc  Vocabulary.hh  attribs.h  common.c  common.h  encalg.c  encalg.h  encutil.cc  encutil.hh  errors.c  fiptypes.h  generic.cc  generic.h  names.h  sax.cc  sax.h  stream.c  stream.h  (+3 more)
btech/btfi/include/: attribs.h  errors.h  names.h  sax.h  values.h  vocab.h
btech/btfi/tests/: saxread.c  saxtest.c  saxtest.cc  saxwrite.c  thirdparty.finf  thirdparty.xml  vocabtest.cc
btech/btpr/: Makefile.am  Makefile.in  comsys.c  conf.c  db.c  dllist.c  eval.c  event.c  flags.c  functions.c  game.c  log.c  move.c  mux_tree.c  netcommon.c  player.c  powers.c  pqueue.c  pqueue.h  predicates.c  rbtab.c  rbtree.c  stringutil.c  tree.c  wild.c
btech/btpr/include/: alloc.h  attrs.h  config.h  copyright.h  db.h  debug.h  dllist.h  externs.h  flags.h  htab.h  interface.h  mudconf.h  mux_tree.h  muxevent.h  p.event.h  p.functions.h  powers.h  rbtree.h  tree.h
btech/btpr/mux2/include/: btpr_alloc.h  btpr_db.h  btpr_interface.h  btpr_mudconf.h
btech/btpr/penn/include/: btpr_mudconf.h
btech/btpr/tests/: pqtest.c
btech/contrib/: hcode.c  map.h
btech/contrib/db/: README  flatfiledb.py  hcode.c  hcodedb.py  map.h
btech/src/: Makefile.am  Makefile.in  btdb.c  btdb.h  btdb_int.h  coolmenu.c  debug.c  events.c  glue.c  glue.hcode.c  glue.scode.c  mech.lostracer.c  mechfile.c  tick.c  xcode_io.c  xcode_io.h
btech/src/btech/: Makefile  aero.bomb.c  aero.move.c  artillery.c  autopilot.h  autopilot_ai.c  autopilot_autogun.c  autopilot_commands.c  autopilot_core.c  autopilot_radio.c  bsuit.c  btechstats.c  btechstats.h  btmacros.h  btspath.c  crit.c  ds.bay.c  ds.turret.c  econ.c  econ_cmds.c  eject.c  failures.c  failures.h  hudinfo.c  map.bits.c  map.c  map.conditions.c  map.dynamic.c  map.h  map.obj.c  mech.advanced.c  mech.ammodump.c  mech.bth.c  mech.c3.c  mech.c3.misc.c  mech.c3i.c  mech.combat.c  mech.combat.h  mech.combat.misc.c  mech.combat.missile.c  (+104 more)
btech/src/include/: btconfig.h  coolmenu_interface.h  coolmenu_interface2.h  glue.h  glue_types.h  macros.h  p.debug.h  p.glue.h  p.glue.hcode.h  p.glue.scode.h  p.mech.lostracer.h  p.mechfile.h  p.spath.h  spath.h
doc/: CREDITS  README  exilemerge.txt  hudinfo.spec
event/: event.c  event_test.c  muxevent.h  p.event.h  p.event_test.h
game/: Startmux  alias.conf  mux.config  netmux.conf
game/.svn/: wc.db
game/data/: mail.db
game/logs/: README
game/maps/: 12VR.OldK-HQ  12VR.jungle  12VR.masters  12VR.treefort  21CL.SimMap2  2forts  BB.ExtremeRough1  BB.MediumRough  BB.Plains  BB.Wilderness2  BB.Wilderness3  CC.fortress  CC.mountain  CGB.river_valley.2  CITY1.MAP  CITY2.MAP  CITY3.MAP  CITY4.MAP  CJF.Sim  CLEAR1.MAP  CNC.Ocean  CNC.Test1  CNC.Torture  CSJ.MWForts  CSJ.woods  CSV.Base  CSV.canyon  CW.Obstacle1  CW.macleod1  CW.macleod2  DC.Manton1  DC.Najha  DC.city2  DC.city3  DC.desert  DC.map3  DC.map4  DC.ranges  DC.scenario1  DC.test1  (+88 more)
game/maps/.svn/: wc.db
game/mechs/: ABS-3L  AC2_Carrier  AF1C  AGS-2D  ALB-3U  ALM-7D  ALM-8D  ALM-9D  ANH-2A  ANV-5M  ANV-5Q  APL-1M  APL-1R  APL-2S  APL-3T  ARC-2R  ARC-2RC  ARC-2RCL  ARC-2W  ARC-4M  ARC-6S  ARC-6W  AS7-C  AS7-DC  AS7-K  AS7-S2  ASN-101  ASN-21  ASN-23  ASN-30  AV1-O  AV1-OD  AV1-OF  AWS-8QCL  AWS-8R  AWS-8T  AWS-8V  AWS-9M  AXM-1N  Achileus-FL  (+850 more)
game/mechs/.svn/: wc.db
game/text/: connect.indx  help.txt  news.txt  newuser.txt  plushelp.txt  wizhelp.txt
game/text/.svn/: wc.db
game/text/help/: agreement  btmuxcredits
game/text/help/cat_advantages/: dodge_maneuver  speed_demon
game/text/help/cat_combat/: combat
game/text/help/cat_faction/: census  facroster  faction
game/text/help/cat_inform/: finger  ranklist  stats  time  uptime  weaplist  weather
game/text/help/cat_macro/: macro
game/text/help/cat_misc/: available  misc
game/text/help/cat_mux/: mux
game/text/help/cat_skills/: skills  skills-econ  skills-technician
game/text/news/: help
game/text/plushelp/: help
game/text/wizhelp/: wizhelp
include/: create.h  muxevent.h  myfifo.h  p.event.h  p.mux_tree.h  p.tree.h
misc/: myfifo.c
src/: Makefile.am  Makefile.in  alloc.c  alloc.h  ansi.h  attrs.h  autoconf.h.in  boolexp.c  bsd.c  buildnum.sh  commac.c  commac.h  command.c  command.h  compat.c  comstar.c  comsys.c  comsys.h  conf.c  config.h  copyright.h  cque.c  cque.h  create.c  db.c  db.h  db_rw.c  db_xdr.c  db_xdr.h  db_xml.c  dbconvert.c  dbformat.x  debug.h  dlist.h  dllist.c  dllist.h  dnschild.c  dummy.cc  eval.c  externs.h  (+90 more)
src/hcode/: coolmenu.c  debug.c  events.c  glue.c  glue.hcode.c  glue.scode.c  mech.lostracer.c  mechfile.c  spath.c  tick.c
src/hcode/btech/: aero.bomb.c  aero.bomb.h  aero.move.c  ai.c  artillery.c  artillery.h  autogun.c  autopilot.c  autopilot.h  autopilot_ai.c  autopilot_autogun.c  autopilot_command.c  autopilot_commands.c  autopilot_core.c  autopilot_radio.c  bsuit.c  btech.c  btechstats.c  btechstats.h  btechstats_global.h  btmacros.h  btspath.c  chargen.c  chargen_commands.h  chargen_menus.h  crit.c  ds.bay.c  ds.turret.c  econ.c  econ_cmds.c  eject.c  extern.h  failures.c  failures.h  floatsim.h  hudinfo.c  hudinfo.h  map.bits.c  map.c  map.coding.c  (+144 more)
src/hcode/include/: btconfig.h  coolmenu.h  coolmenu_interface.h  coolmenu_interface2.h  debug.h  glue.h  glue_types.h  macros.h  mycool.h  p.coolmenu.h  p.events.h  p.glue.h  p.glue.hcode.h  p.glue.scode.h  p.luck.h
tree/: mux_tree.c  mux_tree.h  p.mux_tree.h  tree.c  tree.h  vixie.h
(+647 files in other folders)
